src/assets/css/single_page_css/game.css
/*------------------------*/
/*    GENERAL ELEMENTS    */
/*------------------------*/
* {
    font-family: sans-serif; /* because serif is ugly */
}

body {
    box-sizing: border-box;
    background-image: url("../../../images/background.png");
    background-size: cover;
}

h1, h5 {
    box-sizing: border-box;
    text-align: center;
    padding: 5px;
    font-size: 2rem;
}

ul {
    text-align: center;
}

/*---------------------*/
/* CONTAINING ELEMENTS */
/*---------------------*/
/*------------------------*/
/* PAGE SPECIFIC ELEMENTS */
/*------------------------*/

/*---start header---*/
header {
    height: 10vh;
    display: grid;
    grid-template-columns: 1fr 1fr 4fr 1fr 1fr;
    align-items: center;
    text-align: center;
}

/*--- end header---*/
main {
    height: calc(85vh - 2px); /* prevents scrollbar from appearing*/
    padding: 1vh 4vh 4vh 4vh;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(12, 1fr);
    grid-row-gap: 20px;
    grid-column-gap: 20px;
}

#money, #bank, #market, #reserve, #scoreboard {
    background-color: rgba(42, 42, 42, 0.5);
    border: rgba(255, 255, 255, 0.5) 1px solid;
    box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.4);
}

/* ---start map---*/
#map {
    border: rgb(255, 255, 255) 1px solid;
    box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.4);
    background-color: rgba(255, 255, 255, 0.2);
    grid-area: 1 / 5 / 9 /11;
    position: relative;
}

#map div {
    height: 100%;
    display: grid;
    margin: 0 auto;
}

.map3 {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
}

.map5 {
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 1fr);
}

.map7 {
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(7, 1fr);
}

.map9 {
    grid-template-columns: repeat(9, 1fr);
    grid-template-rows: repeat(9, 1fr);
}

.map3 .building {
    font-size: 2rem;
}

.map5 .building {
    font-size: 1.7rem;
}

.map5 .westWall {
    border-left: black 8px solid;
}

.map5 .southWall {
    border-bottom: black 8px solid;
}

.map5 .northWall {
    border-top: black 8px solid;
}

.map5 .eastWall {
    border-right: black 8px solid;
}

.map7 .building {
    font-size: 1.4rem;
    border: 6px;
}

.map7 .westWall {
    border-left: black 6px solid;
}

.map7 .southWall {
    border-bottom: black 6px solid;
}

.map7 .northWall {
    border-top: black 6px solid;
}

.map7 .eastWall {
    border-right: black 6px solid;
}

.map9 .building {
    font-size: 1.1rem;
    border: 4px;
}

.map9 .westWall {
    border-left: black 4px solid;
}

.map9 .southWall {
    border-bottom: black 4px solid;
}

.map9 .northWall {
    border-top: black 4px solid;
}

.map9 .eastWall {
    border-right: black 4px solid;
}

.fountain {
    background-image: url("../../../images/fountain.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    user-select: none;
    height: 100%;
    box-sizing: border-box;
}

.arcades {
    background-image: url("../../../images/arcades.jpg");
}

.chambers {
    background-image: url("../../../images/chambers.jpg");
}

.garden {
    background-image: url("../../../images/garden.jpg");
}

.pavilion {
    background-image: url("../../../images/pavilion.jpg");
}

.seraglio {
    background-image: url("../../../images/seraglio.jpg");
}

.tower {
    background-image: url("../../../images/tower.jpg");
}

.building {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    font-family: Orbitron, cursive;
    color: white;
    text-shadow: 0 0 5px rgba(0, 0, 0, 1);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    user-select: none;
    height: 100%;
    box-sizing: border-box;
    /*border: 10px solid white;*/ /*#todo: make borders look like in rules and when no borders look normal? */
}

aside {
    position: absolute;
    top: 0;
    right: 5px;
    user-select: none;
}

aside p {
    font-family: Lobster, cursive;
    font-size: 35px;
    display: inline-block;
    user-select: none;
    padding-left: 5px;
    line-height: 25px;
}

aside p:hover {
    color: red;
}

aside p.inactive {
    color: transparent;
}

@keyframes fade {
    from {
        opacity: 1.0;
    }
    50% {
        opacity: 0.5;
    }
    to {
        opacity: 1.0;
    }
}

.blink {
    animation: fade 3000ms infinite;
    background: cornflowerblue; /*make it nice*/
}

/* ---end map---*/
/*---start_reserve---*/
#reserve {
    grid-area: 9 / 9 / 13 /13;
    padding: 10px;
}

#reserve h1 {
    font-family: 'Berkshire Swash', cursive, sans-serif;
    color: white;
    font-weight: lighter;
}

#reserve div, #cityReserve div {
    overflow-x: auto;
    padding: 10px;
    display: grid;
    grid-gap: 10px;
    grid-auto-flow: column;
    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
    grid-template-rows: 1fr;
    box-sizing: border-box;
    height: 75%;
    white-space: nowrap;
    width: 100%;
    grid-auto-columns: minmax(120px, 1fr);
}

.selectReserve {
    outline: blue dashed thick;
}

/*---end_reserve---*/
/*---turn_options---*/
#button_card {
    border: blue solid 2px;
    grid-area: 5 / 11 / 9 /13;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 10%;
    justify-content: space-between;
    box-sizing: border-box;
    padding: 4%;
    align-items: normal;
    text-align: center;
}

#button_card a {
    font-size: 1rem;
    font-weight: bold;
    text-decoration: none;
    color: black;
    border: 2px black solid;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    user-select: none;
}

/*---end_turn_options---*/
/*--scoreboard--*/
#scoreboard {
    grid-area: 1 / 11 / 5 /13;
}
/* ... */

